[tool.poetry]
name = "dabini-engine"
version = "0.1.0"
description = "A FastAPI application using LangChain and OpenAI"
authors = ["Choi Yeonung <yonsweng@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.11"
python-dotenv = "^1.0.1"
langchain = "^0.3.19"
uvicorn = "^0.34.0"
langchain-openai = "^0.3.7"
langgraph = "^0.3.2"

[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"
